# streaming_fastapi

./: .pre-commit-config.yaml  pyproject.toml
streaming/: main.py
streaming/api/utils/: general_response.py
streaming/api/v1/: exc.py  routes.py  v1_router.py
streaming/api/v1/endpoints/: router.py
streaming/api/v1/endpoints/webrtc/: __init__.py  get_offer.py  receive_answer.py  router.py  routes.py  unregister_publisher.py
streaming/api/v1/schemas/: webrtc.py
streaming/core/: exc.py  session_storage.py  settings.py  setup_app.py
streaming/utils/: logger_middleware.py  singletone.py  video_save.py
tst_client/: publisher.py
