[tool.poetry]
name = "streaming"
version = "0.1.0"
description = ""
authors = ["Denis Shchtskyi <denis.shchutskyi@branderstudio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
starlette-prometheus = "^0.9.0"
aiortc = "^1.5.0"
asgiref = "^3.7.2"
aiohttp = "^3.8.5"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
